2003-05-03  Bruce Korb  <bkorb@gnu.org>

	* gcc/fixinc/fixincl.tpl(dne): restore this to force merge conflicts
	in fixincl.x
	* gcc/fixinc/inclhack.def(bsd_stdio_attrs_conflict): fix placement

2003-05-03  Aldy Hernandez  <aldyh@redhat.com>

        * config/rs6000/spe.h: Remove unecessary casts.  Misc cleanups.

2003-05-03  Zack Weinberg  <zack@codesourcery.com>

	PR c/10604
	* c-common.c (warn_sign_compare): Initialize to -1.
	* c-opts.c (c_common_init_options): Don't set warn_sign_compare here.
	(c_common_decode_option <OPT_Wall>): Set warn_sign_compare
	for C++ only.
	(c_common_post_options): Set warn_sign_compare from extra_warnings
	if it's still -1 at this point.

	* toplev.c (maybe_warn_unused_parameter): New static variable.
	(set_Wextra): New static function.
	(W_options): Remove "extra".
	(decode_W_option): Call set_Wextra.
	(independent_decode_option): Likewise.
	(set_Wunused): Cooperate with set_Wextra in setting
	warn_unused_parameter.
	(rest_of_compilation): No need to check extra_warnings as
	well as warn_uninitialized.

	* c-typeck.c (build_binary_op, build_conditional_expr):
	No need to check extra_warnings as well as warn_sign_compare.
	(internal_build_compound_expr): No need to check extra_warnings
	as well as warn_unused_value.
	* function.c (expand_function_end): No need to check extra_warnings
	as well as warn_unused_parameter.
	* stmt.c (expand_expr_stmt_value): No need to check extra_warnings
	as well as warn_unused_value.

	* doc/invoke.texi: Clarify documentation of -Wsign-compare.

	* Makefile.in: Disable -Werror for gengtype-lex.o.

2003-05-03  Olivier Hainque  <hainque@act-europe.fr>

	* emit-rtl.c (last_call_insn, add_function_usage_to): New functions.
	* rtl.h (last_call_insn, add_function_usage_to): New prototypes.
	* builtins.c (expand_builtin_apply): Use the new emit-rtl functions.
	* calls.c (emit_call_1): Likewise.
	(expand_call): For calls initializing constant memory, replace